--- a/installer/Dockerfile
+++ b/installer/Dockerfile
@@ -27,6 +27,7 @@ RUN python3 -m venv /opt/py3 && \
     . /opt/py3/bin/activate && \
     if [ "$(uname -m)" = "x86_64" ]; then sed -i 's/^torch.*/torch = {version = "2.6.0+cpu", source = "pytorch"}/g' pyproject.toml; fi && \
     poetry install && \
+    pip install scikit-learn==1.3.2 pandas==2.1.4 numpy==1.24.4 psutil==5.9.6 && \
     export MAXKB_CONFIG_TYPE=ENV && python3 /opt/maxkb/app/apps/manage.py compilemessages
 
 FROM ghcr.io/1panel-dev/maxkb-python-pg:python3.11-pg15.8
